syntax = "proto3";

option csharp_namespace = "MVC_FrontEnd.Areas.Game.Protos.Game";

package game;



//||||||||||||||||||||||||||||||||\\
//		    PROTO MODELS		  \\
//||||||||||||||||||||||||||||||||\\

message GameProto{
	int32 id = 1;
	string name = 2;
	string description = 3;
}

//Model for the game list (reduced weight).
message GameSimpleProto{ 
	int32 id = 1;
	string name = 2;
}

//================================//